--- a/main.css
+++ b/main.css
@@ -2,35 +2,38 @@ figure{
 	width:70%;
 }
 html{
-
-	font-family: Arial, Helvetica, sans-serif;
+	
+	
 	position:relative;
 }
 .container{
-	background-color:lightcyan;
+	background-color:ghostwhite;
 }
 .skillslist .container{
 	background-color:white;
 }
 
 
-.nav-pills{
 
-	background-color: gray;
-	color:white;
-}
 .nav-pills a{
 
 	color: white;
 	margin:10px;
+	text-decoration:none;
+	
+
 	
 }
+
+
 .navbar{
 
 	min-height:10px;
 }
 body{
 	margin-top: 40px;
+	background-color:ghostwhite !important;
+	text-decoration:none;
 }
 
 .jumbotron{
@@ -43,7 +46,7 @@ background-repeat: no-repeat;
 
 }
 .socmediaimages{
-
+	background-color:ghostwhite;
 	width:100%;
 }
 #linkedinpic{
@@ -73,7 +76,7 @@ background-repeat: no-repeat;
 
 	text-align:center;
 	margin-bottom:5%;
-	background-color: azure;
+	
 }
 .futureprojects{
 
@@ -133,17 +136,14 @@ form textarea{
 	border-top-color:black;
 	border-top-style: solid;
 	border-top-width: 2px;
-	background-color:antiquewhite;
+	
 	margin-bottom: 0px;
 	text-align:center;
 }
 
 figure{
 	width: 70%;
-    border-color: black;
-    /* border-top: black; */
-    border-radius: 5px;
-    border-style: solid;
+    
 	margin-bottom: 15px;
 	background-color:white;
 }
@@ -159,7 +159,7 @@ footer{
 }
 
 #footerareadiv{
-	background-color:tan;
+	
 }
 #contactform{
 	padding-bottom:1%;
